# generic_reader

./: Cargo.toml  config.json  config_eq.json  config_fao.json  csv.csv  json.json  json_array.json  json_lines.json  packed.py  settings.json  struct_gen.py  todo.txt
src/: lib.rs  main.rs  test.rs
src/adapters/: csv_adapter.rs  json_adapter.rs  json_array_adapter.rs  json_lines_adapter.rs  mod.rs  multi_native_adapter.rs  native_adapter.rs
src/adapters/utils/: byte_utils.rs  column_utils.rs  mod.rs
