[package]
name = "generic_reader"
version = "0.1.0"
edition = "2021"

[lib]
name = "reader"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]
csv = "1.3.0"
mylzo = "0.1.0"
serde = {version = "1.0.209", features = ["derive"]}
serde_json = {version="1.0.127", features=["preserve_order"]}
